SIS/force-app/main/default/objects/SIS_Integration_log__c/SIS_Integration_log__c.object-meta.xml
<CustomObject>
    <label>SIS Integration Log</label>
    <nameField>
        <displayFormat>SIS log-{0000}</displayFormat>
        <label>SIS Integration log No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIS Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>