SIS/force-app/main/default/objects/SIS_Integration_log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <label>Request Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>