SIS/force-app/main/default/objects/SIS_Integration_log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>