SIS/force-app/main/default/objects/SIS_Integration_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response_Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>